--- a/ios/rentx/Supporting/Expo.plist
+++ b/ios/rentx/Supporting/Expo.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
   <dict>
     <key>EXUpdatesSDKVersion</key>
-    <string>42.0.0</string>
+    <string>41.0.0</string>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@cleones/rentx</string>
+    <string>https://exp.host/@dougsrodrigues/rentx</string>
     <key>EXUpdatesEnabled</key>
     <true/>
     <key>EXUpdatesCheckOnLaunch</key>
