--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,8 +77,12 @@ import com.android.build.OutputFile
  * ]
  */
 
+// project.ext.react = [
+//     enableHermes: (findProperty('expo.jsEngine') ?: "jsc") == "hermes",
+// ] 
+
 project.ext.react = [
-    enableHermes: (findProperty('expo.jsEngine') ?: "jsc") == "hermes",
+    enableHermes: true,
 ]
 
 apply from: '../../node_modules/react-native-unimodules/gradle.groovy'
