--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,10 @@ target 'rentx' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'WatermelonDB', :path => '../node_modules/@nozbe/watermelondb'
+  pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi', :modular_headers => true
+  pod 'simdjson', path: '../node_modules/@nozbe/simdjson'
+  
   # Uncomment to opt-in to using Flipper
   #
   # if !ENV['CI']
