--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
     "name": "rentx",
     "slug": "rentx",
     "version": "1.0.0",
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "splash": {
       "image": "./assets/splash.png",
       "backgroundColor": "#1b1b1f"
