--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
+  "name": "rentx",
+  "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "start": "react-native start",
-    "api": "json-server src/services/server.json --host 192.168.0.196 --delay 700"
+    "start": "react-native start"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@nozbe/watermelondb": "^0.24.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.1.0",
-    "axios": "^0.21.1",
-    "date-fns": "^2.23.0",
-    "expo": "~42.0.1",
-    "expo-app-loading": "^1.1.2",
-    "expo-font": "~9.2.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
-    "lottie-ios": "3.2.3",
-    "lottie-react-native": "^4.1.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
-    "react-native-calendars": "^1.1264.0",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "axios": "^0.24.0",
+    "date-fns": "^2.26.0",
+    "expo": "~43.0.2",
+    "expo-app-loading": "^1.2.1",
+    "expo-font": "^10.0.3",
+    "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
+    "lottie-ios": "^3.2.3",
+    "lottie-react-native": "4.1.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-calendars": "^1.1269.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
-    "react-native-svg-transformer": "^0.14.3",
-    "react-native-unimodules": "~0.14.6",
-    "react-native-web": "^0.17.1",
-    "styled-components": "^5.3.0",
-    "yup": "^0.32.10"
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-decorators": "^7.16.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "@types/react-native-calendars": "^1.1264.2",
-    "@types/styled-components-react-native": "^5.1.1",
-    "typescript": "~4.0.0"
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.16.4",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "@types/react-native-calendars": "^1.1264.3",
+    "@types/styled-components": "^5.1.15",
+    "@types/styled-components-react-native": "^5.1.3",
+    "react-native-svg-transformer": "^0.14.3",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
